Closed Bug 1833486 Opened 2 years ago Closed 1 year ago

Firefox fails wpt test css-grid/subgrid/subgrid-stretch.html

Categories

(Core :: Layout: Grid, defect)

defect

Tracking

()

RESOLVED FIXED

People

(Reporter: dholbert, Assigned: TYLin)

References

(Blocks 1 open bug)

Details

Attachments

(1 file, 1 obsolete file)

wpt.fyi: https://wpt.fyi/results/css/css-grid/subgrid/subgrid-stretch.html

wpt.live:
test: http://wpt.live/css/css-grid/subgrid/subgrid-stretch.html
reference: http://wpt.live/css/css-grid/subgrid/subgrid-stretch-ref.html

It looks like the inline-grid elements are all 100x100 squares, and the test is expecting the blue subgrid inside to stretch to fill that area, per this spec quote that the test links to:

The subgrid is always stretched in its subgridded dimension(s): the align-self/justify-self properties on it are ignored, as are any specified width/height constraints.

https://drafts.csswg.org/css-grid-2/#subgrid-box-alignment

See Also: → 1841296

This implements https://drafts.csswg.org/css-grid/#subgrid-box-alignment

In subgrid-stretch.html wpt, those inline-grid containers are wrapped into
multiple lines. Firefox might have a baseline alignment bug such that there is
no gap between line 3 and line 4. Since the wpt is meant to test subgrid
stretch, not grid container's baseline, I add vertical-align:top to make
Firefox pass the test and margin-bottom for better visualization.

Depends on D196705

Assignee: nobody → aethanyc
Status: NEW → ASSIGNED
Depends on: 1350037
Duplicate of this bug: 1841296
See Also: 1841296
No longer duplicate of this bug: 1841296

Comment on attachment 9369160 [details]
Bug 1833486 - Implement stretch for subgrids in the subgridded axis. r?dholbert

Revision D196706 was moved to bug 1841296. Setting attachment 9369160 [details] to obsolete.

Attachment #9369160 - Attachment is obsolete: true
Depends on: 1841296

TYLin's patch which just moved to bug 1841296 gets us nearly to passing this test.

There's just one minor cosmetic difference here that's still causing a test-failure: the test's final inline-grid on each of the two lines happens to linewrap to a new line, and that final linewrapped inline-grid is vertically a bit higher in the testcase vs. the reference case, due to the fact that we apparently export a central baseline for grids with an orthogonal-writing-mode grid item. (That seems incorrect.)

This is a reduced testcase for the baseline-alignment issue. The root cause might be tracked in another interop-2023 issue already (we have a handful of remaining baseline-related grid/subgrid test failures).

Depends on: 1870949

This test will starts passing once my patch (pending review) lands over in bug 1870949. (It just fixes the last minor issue; TYLin's fix in bug 1841296 fixed the main issue here).

That patch landed and this test is indeed showing up as passing now here:
https://wpt.fyi/results/css/css-grid/subgrid/subgrid-stretch.html?label=experimental&label=master

(This isn't yet reflected in interop-2023 dashboard, just because we don't yet have an "aligned run" [with results for all browsers] that includes the fix.)

Resolving as FIXED by the patches that landed in bug 1870949 and bug 1841296. (This isn't exactly a dupe of either one of them; it depended on both.)

Status: ASSIGNED → RESOLVED
Closed: 1 year ago
Resolution: --- → FIXED

Note: Bug 1949064 reintroduced a test failure for css-grid/subgrid/subgrid-stretch.html, but bug 1977501 fixed it again.

You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: